// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextButton /> shows the correct snapshot tree for the <TextButton> element 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  z-index: 2;
  color: #35c5fc;
  text-decoration: none;
  transition: color 200ms;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

<button
  className="css-0"
  role="button"
>
  The TextButton
</button>
`;

exports[`<TextButton /> shows the correct snapshot tree for the <TextButton> element with options 1`] = `
.css-0,
[data-css-0] {
  position: relative;
  z-index: 2;
  color: green;
  text-decoration: none;
  transition: color 200ms;
  margin-top: 512px;
  font-size: 18px;
  -webkit-transition: color 200ms;
  -moz-transition: color 200ms;
}

<button
  className="css-0"
  role="button"
>
  The TextButton with options
</button>
`;
